--- a/DeepLearnin.AI/Machine Learning Speicialization/C1 Supervised Machine Learning - Regression and Classification/C1 W2/week2-Regression_with_multiple_input_variables.ipynb
+++ b/DeepLearnin.AI/Machine Learning Speicialization/C1 Supervised Machine Learning - Regression and Classification/C1 W2/week2-Regression_with_multiple_input_variables.ipynb
@@ -15,20 +15,25 @@
     "\n",
     "|General <br /> Notation| Description | Python (if applicable) |\n",
     "|-------------------|----------------------------------------------------------------------------------------------------|-------------------------|\n",
-    "| $a$ | scalar, non bold                                                      ||\n",
-    "| $\\mathbf{a}$ | vector, bold                                                 ||\n",
-    "| $\\mathbf{A}$ | matrix, bold capital                                         ||\n",
-    "| **Regression** |         |    |     |\n",
-    "|  $\\mathbf{X}$ | training example matrix                  | `X_train` |   \n",
-    "|  $\\mathbf{y}$  | training example  targets                | `y_train` \n",
-    "|  $\\mathbf{x}^{(i)}$, $y^{(i)}$ | $i_{th}$Training Example | `X[i]`, `y[i]`|\n",
-    "| m | number of training examples | `m`|\n",
-    "| n | number of features in each example | `n`|\n",
-    "|  $\\mathbf{w}$  |  parameter: weight,                       | `w`    |\n",
-    "|  $b$           |  parameter: bias                                           | `b`    |     \n",
-    "| $f_{\\mathbf{w},b}(\\mathbf{x}^{(i)})$ | The result of the model evaluation at $\\mathbf{x^{(i)}}$ parameterized by $\\mathbf{w},b$: $f_{\\mathbf{w},b}(\\mathbf{x}^{(i)}) = \\mathbf{w} \\cdot \\mathbf{x}^{(i)}+b$  | `f_wb` | \n",
-    "|$\\frac{\\partial J(\\mathbf{w},b)}{\\partial w_j}$| the gradient or partial derivative of cost with respect to a parameter $w_j$ |`dj_dw[j]`| \n",
-    "|$\\frac{\\partial J(\\mathbf{w},b)}{\\partial b}$| the gradient or partial derivative of cost with respect to a parameter $b$| `dj_db`|"
+    "| $a$  | scalar, non bold | |\n",
+    "| $\\mathbf{a}$  | vector, bold  | |\n",
+    "| $\\mathbf{A}$ | matrix, bold capital   | |\n",
+    "| **Regression** |  |  |\n",
+    "|  $\\mathbf{x}$  | Training Example feature values <img width=429/> | `x_train` | \n",
+    "|  $\\mathbf{y}$  | Training Example  targets  | `y_train` | \n",
+    "|  $x^{(i)}$, $y^{(i)}$  | ith Training Example  | `x[i]`, `y[i]` |\n",
+    "|  $x_j$  | The value of jth Training feature  | `x[:,j]` |\n",
+    "|  ${x_j}^{(i)}$  | The value of the jth Training feature in the ith training example  | `x[i,j]` |\n",
+    "| m  | Number of training examples | `m` |\n",
+    "| n | Total number of features | `n`|\n",
+    "|  $w$ |  parameter: weight | `w` |\n",
+    "| $w_{(i)}$ | The ith weight of a multiple regression equation | `w_i`|\n",
+    "|  $b$ |  parameter: bias | `b` |\n",
+    "| $\\alpha$ | The learning rate; which is usually a small number ($0 < \\alpha < 1$) | `alpha` | \n",
+    "| $\\hat{y}^{(i)}$ | predicted target value | `y_pred` |   \n",
+    "| $f_{w,b}(x^{(i)})$ | The result of the model evaluation at $x^{(i)}$ parameterized by $w,b$: $f_{w,b}(x^{(i)}) = wx^{(i)}+b$  | `f_wb` |\n",
+    "|$\\frac{\\partial J(\\mathbf{w},b)}{\\partial w_j}$| the gradient or partial derivative of cost with respect to a parameter $w_j$ |    `dj_dw[j]`  | \n",
+    "|   $\\frac{\\partial J(\\mathbf{w},b)}{\\partial b}$  | the gradient or partial derivative of cost with respect to a parameter $b$ | `dj_db`   |\n"
    ]
   },
   {
