Update 1. SQL Basics.md

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -4,7 +4,7 @@
 * Consistent column types are one of the main reasons working with databases is fast, even with large databases.
 
 # SQL Formating
-1. Despite SQL queries being not case-sensitive, it is common and best practice to capitalize all SQL commands, like SELECT and FROM, and keep everything else in your query lower case.
+1. Despite SQL queries being not case-sensitive, it is common and best practice to capitalize all SQL commands, like `SELECT` and `FROM`, and keep everything else in your query lower case.
 2. SQL queries ignore spaces, so you can add as many spaces and blank lines between code as you want, and the queries are the same.
 #### This query
       SELECT account_id FROM orders
