Update 1. SQL Basics.md

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -50,9 +50,9 @@ Your query may need a semicolon at the end to execute. Other environments are mo
   * Non-numeric: `LIKE`, `NOT`, `IN`, `AND`, `BETWEEN`, `OR`, (`=` --- equal to) and (`!=` --- not equal to)
 
 ### Logical Operators:
-1. `LIKE` This allows you to perform operations similar to using WHERE and =, but for cases when you might not know exactly what you are looking for. We use '%' where we do not know the filling. 
-2. `IN` This allows you to perform operations similar to using WHERE and =, but for a list of condition(s) or values.
-3. `NOT` This is used with IN and LIKE to select all of the rows NOT LIKE or NOT IN a certain condition.
+1. `LIKE` This allows you to perform operations similar to using `WHERE` and `=`, but for cases when you might not know exactly what you are looking for. We use `%` where we do not know the filling. 
+2. `IN` This allows you to perform operations similar to using `WHERE` and `=`, but for a list of condition(s) or values.
+3. `NOT` This is used with `IN` and `LIKE` to select all of the rows `NOT LIKE` or `NOT IN` a certain condition.
 4. `AND` & `BETWEEN` These allow you to combine operations where all combined conditions must be true.
 5. `OR` This allows you to combine operations where at least one of the combined conditions must be true.
 
