Update 0. SQL Introduction.md

--- a/SQL Summaries/0. SQL Introduction.md
+++ b/SQL Summaries/0. SQL Introduction.md
@@ -12,7 +12,7 @@ There is SQL (Structure Query Language) and NoSQL (not only SQL). NoSQL environm
 2. Data can be accessed quickly: SQL allows you to obtain results very quickly from the data stored in a database. Code can be optimized to quickly pull results.
 3. Data is easily shared: multiple individuals can access data stored in a database, and the data is the same for all users allowing for consistent results for anyone with access to your database.
 
-### There are various SQL Database Management Systems (DBMS) like:
+### There are various SQL DataBase Management Systems (DBMS) like:
 1. MySQL
 2. Microsoft Access
 3. Oracle SQL
