--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -54,7 +54,11 @@ Your query may need a semicolon at the end to execute. Other environments are mo
 2. `IN` This allows you to perform operations similar to using `WHERE` and `=`, but for a list of condition(s) or values.
 3. `NOT` This is used with `IN` and `LIKE` to select all of the rows `NOT LIKE` or `NOT IN` a certain condition.
 4. `AND` & `BETWEEN` These allow you to combine operations where all combined conditions must be true.
-5. `OR` This allows you to combine operations where at least one of the combined conditions must be true.
+
+   `WHERE column >= 6 AND column <= 10` is equivalent to `WHERE column BETWEEN 6 AND 10`.
+
+   `WHERE occurred_at >= '2016-04-01' AND occurred_at <= '2016-10-01'` is equivalent to `WHERE occurred_at BETWEEN '2016-04-01' AND '2016-10-01'`
+6. `OR` This allows you to combine operations where at least one of the combined conditions must be true.
 
 ### Example 1:   
       SELECT *
@@ -70,3 +74,8 @@ Your query may need a semicolon at the end to execute. Other environments are mo
       SELECT *
       FROM web_events
       WHERE referrer_url LIKE '%google%';
+
+### Example 4:
+      SELECT name, primary_poc, sales_rep_id
+      FROM accounts
+      WHERE name NOT IN ('Walmart', 'Target', 'Nordstrom');
