update BETWEEN's content for Timestamps

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -55,9 +55,10 @@ Your query may need a semicolon at the end to execute. Other environments are mo
 3. `NOT` This is used with `IN` and `LIKE` to select all of the rows `NOT LIKE` or `NOT IN` a certain condition.
 4. `AND` & `BETWEEN` These allow you to combine operations where all combined conditions must be true.
 
-   `WHERE column >= 6 AND column <= 10` is equivalent to `WHERE column BETWEEN 6 AND 10`.
+   For Numerical values: `WHERE column >= 6 AND column <= 10` is equivalent to `WHERE column BETWEEN 6 AND 10`.
 
-   `WHERE occurred_at >= '2016-04-01' AND occurred_at <= '2016-10-01'` is equivalent to `WHERE occurred_at BETWEEN '2016-04-01' AND '2016-10-01'`
+   For Timestamps: `WHERE occurred_at >= '2016-04-01' AND occurred_at <= '2016-10-01'` is equivalent to `WHERE occurred_at BETWEEN '2016-04-01' AND '2016-10-01'`.
+   By the way, this will include till 2016-10-01 at midnight to the whole day.
 6. `OR` This allows you to combine operations where at least one of the combined conditions must be true.
 
 ### Example 1:   
