--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -80,3 +80,8 @@ Your query may need a semicolon at the end to execute. Other environments are mo
       SELECT name, primary_poc, sales_rep_id
       FROM accounts
       WHERE name NOT IN ('Walmart', 'Target', 'Nordstrom');
+
+### Example 5:
+      SELECT *
+      FROM orders
+      WHERE (standard_qty = 0 OR gloss_qty = 0 OR poster_qty = 0)      AND      occurred_at >= '2016-10-01'
