Update: Why the tabels of relational databases are kept in multiple tables?

--- a/SQL Summaries/2. SQL JOINs.md
+++ b/SQL Summaries/2. SQL JOINs.md
@@ -4,4 +4,7 @@
 ![Relational Database](https://github.com/Sir-Elite/My-Summaries/assets/66035383/9a867621-a751-4f3e-a11b-b447dc1de3c4)
 
 ### Why the tabels of relational databases are kept in multiple tables?
-Because sometimes the data gets repeated and take bigger storage size if we kept it all in one table. For example: if `orders` and `accounts` were in the same table, all of the account data would have been repeated with everytime the user makes an order. But this way kept repaeating the `account_id` only, and the `account_id` can link to the data of the account owner in the `accounts` table.
+Some of the reasons are:
+1. Sometimes the data gets repeated and take bigger storage size if we kept it all in one table. For example: if `orders` and `accounts` were in the same table, all of the account data would have been repeated with everytime the user makes an order. But this way kept repaeating the `account_id` only, and the `account_id` can link to the data of the account owner in the `accounts` table.
+2. The lesser amount of data the query needs to read and the calculations it needs to make, the faster it executes.
+3. To ease access seperation from different database users.
