Added Alias and (PK and FK)

--- a/SQL Summaries/2. SQL JOINs.md
+++ b/SQL Summaries/2. SQL JOINs.md
@@ -3,8 +3,66 @@
 # Relational Database
 ![Relational Database](https://github.com/Sir-Elite/My-Summaries/assets/66035383/9a867621-a751-4f3e-a11b-b447dc1de3c4)
 
+#### The **PK** stands for primary key. A primary key exists in every table, and it is a column that has a unique value for every row. It is common that the primary key is the first column in our tables in most databases.
+#### The **FK** stands for foreign key. A foreign key is a column in one table that is a primary key in a different table.
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/1a4fa32b-6e29-4bd6-a8af-1191f52ac5f6)
+
+
 ### Why the tabels of relational databases are kept in multiple tables?
 Some of the reasons are:
 1. Sometimes the data gets repeated and take bigger storage size if we kept it all in one table. For example: if `orders` and `accounts` were in the same table, all of the account data would have been repeated with everytime the user makes an order. But this way kept repaeating the `account_id` only, and the `account_id` can link to the data of the account owner in the `accounts` table.
 2. The lesser amount of data the query needs to read and the calculations it needs to make, the faster it executes.
-3. To ease access seperation from different database users.
+3. The updates for bigger dataset takes more computational efforts and time.
+4. To ease access seperation from different database users.
+
+# JOINs:
+JOINs make the queries more complex. It tells the query an additional table from which you would like to pull data.
+## JOIN has many types:
+1. Inner JOIN:
+    
+    We use `JOIN` to specify the additional table, and `ON` to specifies the column on which you'd like to merge the two tables together (the PK equal to the FK).
+
+## Alias in JOIN:
+When we JOIN tables together, it is nice to give each table an alias to use it in the query instead of the whole name of the table, which is usually larger.
+
+#### Instead of using AS:
+    1.  FROM tablename AS t1
+        JOIN tablename2 AS t2
+    -------------------------------------
+    2.  SELECT col1 + col2 AS total, col3
+#### We can use space:
+    1.  FROM tablename t1
+        JOIN tablename2 t2
+    -------------------------------------
+    2.  SELECT col1 + col2 total, col3
+
+## Examples
+### Example 1:
+    SELECT w.channel, a.primary_poc, w.occurred_at, a.name
+    FROM web_events w
+    JOIN accounts a
+    ON w.account_id = a.id
+    WHERE a.name LIKE 'Walmart';
+
+### Example 2:
+    SELECT *
+    FROM web_events
+    JOIN accounts
+    ON web_events.account_id = accounts.id
+    JOIN orders
+    ON accounts.id = orders.account_id;
+
+### Example 3:
+    SELECT orders.*
+    FROM orders
+    JOIN accounts
+    ON orders.account_id = accounts.id;
+
+### Example 4:
+    SELECT a.name account, s.name sales_rep, r.name region
+    FROM sales_reps s
+    JOIN region r
+    ON r.id = s.region_id
+    JOIN accounts a
+    ON s.id = a.sales_rep_id
+    ORDER BY a.name;
