--- a/SQL Summaries/2. SQL JOINs.md
+++ b/SQL Summaries/2. SQL JOINs.md
@@ -5,6 +5,7 @@
 
 #### The **PK** stands for primary key. A primary key exists in every table, and it is a column that has a unique value for every row. It is common that the primary key is the first column in our tables in most databases.
 #### The **FK** stands for foreign key. A foreign key is a column in one table that is a primary key in a different table.
+#### Choosing the set up of data in our database is very important, which is not usually the job of a data analyst. This process is known as Database Normalization.
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/1a4fa32b-6e29-4bd6-a8af-1191f52ac5f6)
 
 
@@ -17,10 +18,21 @@ Some of the reasons are:
 
 # JOINs:
 JOINs make the queries more complex. It tells the query an additional table from which you would like to pull data.
-## JOIN has many types:
-1. Inner JOIN:
-    
-    We use `JOIN` to specify the additional table, and `ON` to specifies the column on which you'd like to merge the two tables together (the PK equal to the FK).
+
+## How to Use JOIN ... ON ...:
+We use `JOIN` to specify the additional table, and `ON` to specifies the column on which you'd like to merge the two tables together (should always be the PK equal to the FK, but SQL allows otherwise).
+
+## JOIN Types:
+1. **Inner JOIN**:
+
+   Returns only the rows where there's a match in both tables based on a common column. Think of it like finding intersections between two sets of data.
+   `JOIN` = `INNER JOIN`
+3. **Outer JOIN**:
+
+    Outer JOIN fills in unmatched data with `NULL` values for the non-matching table's columns. It has three types:
+    * `LEFT JOIN` = `LEFT OUTER JOIN`: Includes all rows from the left table and matching rows from the right table.
+    * `RIGHT JOIN` = `RIGHT OUTER JOIN`: Includes all rows from the right table and matching rows from the left table.
+    * `FULL JOIN` = `OUTER JOIN` = `FULL OUTER JOIN`: Includes all rows from both tables, regardless of whether there's a match.
 
 ## Alias in JOIN:
 When we JOIN tables together, it is nice to give each table an alias to use it in the query instead of the whole name of the table, which is usually larger.
@@ -35,6 +47,9 @@ When we JOIN tables together, it is nice to give each table an alias to use it i
         JOIN tablename2 t2
     -------------------------------------
     2.  SELECT col1 + col2 total, col3
+
+## Pro Tip:
+Logic in the `ON` clause reduces the rows before combining the tables, while logic in the `WHERE` clause occurs after the `JOIN` occurs. Think of this as building the new result set using the `ON` clause, then resulted set is filtered using the `WHERE` clause.
 
 ## Examples
 ### Example 1:
@@ -55,7 +70,7 @@ When we JOIN tables together, it is nice to give each table an alias to use it i
 ### Example 3:
     SELECT orders.*
     FROM orders
-    JOIN accounts
+    INNER JOIN accounts
     ON orders.account_id = accounts.id;
 
 ### Example 4:
@@ -66,3 +81,30 @@ When we JOIN tables together, it is nice to give each table an alias to use it i
     JOIN accounts a
     ON s.id = a.sales_rep_id
     ORDER BY a.name;
+
+### Example 5:
+    SELECT a.name account, r.name region, o.total_amt_usd/(o.total+0.01) unit_price
+    FROM accounts a
+    JOIN orders o
+    ON a.id = o.account_id
+    AND o.standard_qty > 100    AND    poster_qty > 50
+    JOIN sales_reps s
+    ON a.sales_rep_id = s.id
+    JOIN region r
+    ON r.id = s.region_id
+    ORDER BY unit_price DESC;
+
+### Example 6:
+    SELECT DISTINCT a.name account, w.channel
+    FROM accounts a
+    JOIN web_events w
+    ON a.id = w.account_id
+    AND a.id = 1001;
+
+### Example 7:
+    SELECT o.occurred_at, a.name, o.total, o.total_amt_usd
+    FROM orders o
+    JOIN accounts a
+    ON o.account_id = a.id
+    AND o.occurred_at BETWEEN '2015-01-01' AND '2016-01-01'
+    ORDER BY o.occurred_at DESC;
