--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -1,1 +1,5 @@
+### NULL
+`NULL` means no data. NULLs are different than a zero - they are cells where data is missing. They usually happen because of:
+1. Performing and outer JOIN
+2. Simply missing data in the database.
 
