--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -3,3 +3,17 @@
 1. Performing and outer JOIN
 2. Simply missing data in the database.
 
+# Aggregations
+## Aggregation Functions:
+1. `COUNT()`: counts the number of rows, and it can be applied to any type of columns.
+
+
+## Examples
+### Example 1:
+    SELECT *
+    FROM accounts
+    WHERE primary_poc IS NOT NULL
+
+### Example 2:
+    SELECT COUNT(primary_poc)
+    FROM accounts
