--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -4,8 +4,10 @@
 2. Simply missing data in the database.
 
 # Aggregations
+Aggregators only aggregate vertically - the values of a column. If you want to perform a calculation across rows, you would do this with simple arithmetic. They usually ignore `NULL` cells.
 ## Aggregation Functions:
 1. `COUNT()`: counts the number of rows, and it can be applied to any type of columns.
+2. `SUM()`: sums the numeric values in the column.
 
 
 ## Examples
@@ -17,3 +19,7 @@
 ### Example 2:
     SELECT COUNT(primary_poc)
     FROM accounts
+
+### Example 3:
+    SELECT SUM(standard_amt_usd)/SUM(standard_qty) standard_amt_usd_per_unit
+    FROM orders
