Example 6 to get the earliest order

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -86,6 +86,12 @@ Your query may need a semicolon at the end to execute. Other environments are mo
       FROM orders
       WHERE (standard_qty = 0 OR gloss_qty = 0 OR poster_qty = 0)      AND      occurred_at >= '2016-10-01'
 
+### Example 6:
+      SELECT occurred_at
+      FROM orders
+      ORDER BY occurred_at
+      LIMIT 1
+
 ## Commands Summary
 | Statement    | How to Use It	 | How to Use It	|
 | -------- | ------- | ------- |
