MIN(), MAX() & AVG()     +      Median Calculation Example

--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -8,6 +8,9 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
 ## Aggregation Functions:
 1. `COUNT()`: counts the number of rows, and it can be applied to any type of columns.
 2. `SUM()`: sums the numeric values in the column.
+3. `MIN()`: gets the minimum depending on the column type, it returns the lowest number, earliest date, or non-numerical value as early in the alphabet as possible.
+4. `MAX()`: gets the maximum depending on the column type, it returns the highest number, the latest date, or the non-numerical value closest alphabetically to “Z”.
+5. `AVG()`: returns the average (mean) of the values in a specific column.
 
 
 ## Examples
@@ -23,3 +26,14 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
 ### Example 3:
     SELECT SUM(standard_amt_usd)/SUM(standard_qty) standard_amt_usd_per_unit
     FROM orders
+
+### Example 4 ((Median Calculation)):
+    SELECT *
+    FROM    (SELECT total_amt_usd
+            FROM orders
+            ORDER BY total_amt_usd
+            LIMIT   (SELECT COUNT(total_amt_usd) / 2
+                    FROM orders) + 1 
+            ) AS Table1
+    ORDER BY total_amt_usd DESC
+    LIMIT 2
