--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -11,7 +11,7 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
 3. `MIN()`: gets the minimum depending on the column type, it returns the lowest number, earliest date, or non-numerical value as early in the alphabet as possible.
 4. `MAX()`: gets the maximum depending on the column type, it returns the highest number, the latest date, or the non-numerical value closest alphabetically to “Z”.
 5. `AVG()`: returns the average (mean) of the values in a specific column.
-
+6. `GROUP BY`: aggregates the dataset into subsets. We can `GROUP BY` multiple coulumns at once, knowing that the order of column names in a `GROUP BY` clause doesn’t matter. Any column that is not within an aggregation must show up in the `GROUP BY` statement, otherwise, it is an error.
 
 ## Examples
 ### Example 1:
@@ -19,13 +19,17 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
     FROM accounts
     WHERE primary_poc IS NOT NULL
 
-### Example 2:
-    SELECT COUNT(primary_poc)
-    FROM accounts
+### Example 2 ((Sales Reps / Region)):
+    SELECT r.name region, COUNT(s.id) sales_reps
+    FROM sales_reps s
+    JOIN region r
+    ON r.id = s.region_id
+    GROUP BY region
+    ORDER BY sales_reps;
 
-### Example 3:
+### Example 3 ((Price / Unit)):
     SELECT SUM(standard_amt_usd)/SUM(standard_qty) standard_amt_usd_per_unit
-    FROM orders
+    FROM orders;
 
 ### Example 4 ((Median Calculation)):
     SELECT *
@@ -36,4 +40,12 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
                     FROM orders) + 1 
             ) AS Table1
     ORDER BY total_amt_usd DESC
-    LIMIT 2
+    LIMIT 2;
+
+### Example 5:
+    SELECT a.name account, MIN(o.total_amt_usd) smallest_order_total_usd
+    FROM orders o
+    JOIN accounts a
+    ON a.id = o.account_id
+    GROUP BY account
+    ORDER BY smallest_order_total_usd;
