HAVING + CLAUSE ORDER UPDATE + Examples Added

--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -12,6 +12,7 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
 4. `MAX()`: gets the maximum depending on the column type, it returns the highest number, the latest date, or the non-numerical value closest alphabetically to “Z”.
 5. `AVG()`: returns the average (mean) of the values in a specific column.
 6. `GROUP BY`: aggregates the dataset into subsets. We can `GROUP BY` multiple coulumns at once, knowing that the order of column names in a `GROUP BY` clause doesn’t matter. Any column that is not within an aggregation must show up in the `GROUP BY` statement, otherwise, it is an error.
+7. `HAVING`: filters aggregate columns, because `WHERE` clause does not.
 
 ## Examples
 ### Example 1:
@@ -49,3 +50,35 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
     ON a.id = o.account_id
     GROUP BY account
     ORDER BY smallest_order_total_usd;
+
+### Example 6:
+    SELECT COUNT(*) 
+    FROM    (SELECT a.name, COUNT(*)
+            FROM accounts a
+            JOIN orders o
+            ON a.id = o.account_id
+            GROUP BY a.name
+            HAVING COUNT(*) > 20)
+
+### Example 7 ((Get Account with the Most Orders)):
+    SELECT account, orders_num as max_orders_of_all
+    FROM    (SELECT a.name account, COUNT(*) orders_num
+            FROM accounts a
+            JOIN orders o
+            ON a.id = o.account_id
+            GROUP BY a.name
+            )
+    ORDER BY orders_num DESC
+    LIMIT 1;
+
+## SQL Caluses In Order:
+1. `SELECT`
+2. `DISTINCT`, `COUNT()`, `SUM()`, `MIN()`, `MAX()`, `AVG()`
+4. `FROM`
+5. `JOIN`
+6. `ON`
+7. `WHERE`
+8. `GROUP BY`
+9. `HAVING`
+10. `ORDER BY`
+11. `LIMIT`
