--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -13,6 +13,11 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
 5. `AVG()`: returns the average (mean) of the values in a specific column.
 6. `GROUP BY`: aggregates the dataset into subsets. We can `GROUP BY` multiple coulumns at once, knowing that the order of column names in a `GROUP BY` clause doesn’t matter. Any column that is not within an aggregation must show up in the `GROUP BY` statement, otherwise, it is an error.
 7. `HAVING`: filters aggregate columns, because `WHERE` clause does not.
+8. Dates in Databases:
+
+   Databases store dates in form of `YYYY-MM-DD HH:MM:SS`; from largest unit to smallest one.
+    1. `DATE_TRUNC('day' or 'month' or 'year', column_name)`: Truncates the date column into days, months, or years.
+    2. `DATE_PART('dow' or 'day' or 'month' or 'year', column_name)`: pulls a specific portion of a date, but notice pulling `month` or day of the week `dow` means that you are no longer keeping the years in order. Rather you are grouping for certain components regardless of which year they belonged in.
 
 ## Examples
 ### Example 1:
@@ -60,25 +65,46 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
             GROUP BY a.name
             HAVING COUNT(*) > 20)
 
-### Example 7 ((Get Account with the Most Orders)):
+### Example 7 ((Get Account with the Most Orders Using Subquery, and the Numbers of Columns Instead of Their Names)):
     SELECT account, orders_num as max_orders_of_all
     FROM    (SELECT a.name account, COUNT(*) orders_num
             FROM accounts a
             JOIN orders o
             ON a.id = o.account_id
-            GROUP BY a.name
+            GROUP BY 1
             )
-    ORDER BY orders_num DESC
+    ORDER BY 2 DESC
     LIMIT 1;
+
+### Example 8:
+    SELECT DATE_TRUNC('month', occurred_at), SUM(o.gloss_amt_usd) total_spent_gloss
+    FROM orders o
+    JOIN accounts a
+    ON o.account_id = a.id
+    AND a.name LIKE 'Walmart'
+    GROUP BY DATE_TRUNC('month', occurred_at)
+    ORDER BY total_spent_gloss DESC
+    LIMIT 1;
+
+### Example 9:
+    SELECT DATE_PART('month', occurred_at) ord_month, SUM(total_amt_usd) total_spent
+    FROM orders
+    WHERE occurred_at BETWEEN '2014-01-01' AND '2017-01-01'
+    GROUP BY 1
+    ORDER BY 2 DESC; 
 
 ## SQL Caluses In Order:
 1. `SELECT`
-2. `DISTINCT`, `COUNT()`, `SUM()`, `MIN()`, `MAX()`, `AVG()`
+2. `DISTINCT`, `COUNT()`, `SUM()`, `MIN()`, `MAX()`, `AVG()`, `CASE WHEN ... THEN ... ELSE ... END`
 4. `FROM`
 5. `JOIN`
 6. `ON`
 7. `WHERE`
 8. `GROUP BY`
-9. `HAVING`
+9. `HAVING` + `COUNT()`, `SUM()`, `MIN()`, `MAX()`, `AVG()` in a conditional statement
 10. `ORDER BY`
 11. `LIMIT`
+
+### Date Clauses assigned to everytime the column is called:
+1. `DATE_TRUNC('day' or 'month' or 'year', column_name)`
+2. `DATE_PART('dow' or 'day' or 'month' or 'year', column_name)`
