--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -18,6 +18,7 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
    Databases store dates in form of `YYYY-MM-DD HH:MM:SS`; from largest unit to smallest one.
     1. `DATE_TRUNC('day' or 'month' or 'year', column_name)`: Truncates the date column into days, months, or years.
     2. `DATE_PART('dow' or 'day' or 'month' or 'year', column_name)`: pulls a specific portion of a date, but notice pulling `month` or day of the week `dow` means that you are no longer keeping the years in order. Rather you are grouping for certain components regardless of which year they belonged in.
+9. `CASE WHEN ... THEN ... ELSE ... END`: Derives new column using conditional logic (`if ... else if ... else ...` logic). We can use as many `WHEN ... THEN ...` as it is necessary for the query's proper execution. Getting the same information using a `WHERE` clause means only being able to get one set of data from the `CASE` at a time, so we can replace many `WHERE` queries with only one `CASE` query.
 
 ## Examples
 ### Example 1:
@@ -91,7 +92,14 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
     FROM orders
     WHERE occurred_at BETWEEN '2014-01-01' AND '2017-01-01'
     GROUP BY 1
-    ORDER BY 2 DESC; 
+    ORDER BY 2 DESC;
+
+### Example 10:
+    SELECT id, total,
+           CASE WHEN total < 1000 THEN 'Less than 1000'
+           WHEN total < 2000 THEN 'Between 1000 and 2000'
+           ELSE 'At Least 2000' END order_cat
+    FROM orders
 
 ## SQL Caluses In Order:
 1. `SELECT`
