Update 4. SQL Subqueries & Temporary Tables.md

--- a/SQL Summaries/4. SQL Subqueries & Temporary Tables.md
+++ b/SQL Summaries/4. SQL Subqueries & Temporary Tables.md
@@ -1,1 +1,39 @@
+# Subqueries
+* Subqueries is about building queries upon the results of another query.
+* Subqueries are also known as "inner queries" and "nested queries".
+* Subqueries **must** have aliasing.
+* When writing Subqueries, it is easy for your query to look incredibly complex. In order to assist your reader, which is often just yourself at a future date, formatting SQL will help with understanding your code. A well formated query is shown in "**Example 2**" below.
+* Alias should not be included when writing a subquery in a conditional statement. This is because the subquery is treated as an individual value (or set of values in the `IN` case) rather than as a table.
 
+
+## Examples:
+### Example 1:
+    SELECT channel, AVG(events_num)
+    FROM (SELECT DATE_TRUNC('day', occurred_at), channel,
+          COUNT(*) AS events_num
+          FROM web_events
+          GROUP BY 1, 2
+          ORDER BY 3 DESC
+          ) sub
+    GROUP BY channel
+
+### Example 2 ((Well Formated Query)):
+    SELECT *
+    FROM (SELECT DATE_TRUNC('day',occurred_at) AS day,
+                 channel, COUNT(*) as events
+          FROM web_events 
+          GROUP BY 1,2
+          ORDER BY 3 DESC) sub
+    GROUP BY day, channel, events
+    ORDER BY 2 DESC;
+
+### Examples 3:
+    SELECT DATE_TRUNC('month', occurred_at), AVG (standard_qty) standard,
+           AVG (gloss_qty) gloss, AVG (poster_qty) poster,
+           SUM (total_amt_usd) total_spent
+    FROM orders
+    WHERE DATE_TRUNC('month', occurred_at) = (
+          SELECT MIN(DATE_TRUNC('month', occurred_at))
+          FROM orders
+          )
+    GROUP BY DATE_TRUNC('month', occurred_at)                         
