--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -33,8 +33,8 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
   * Focus on methods (functions), which can be called by clients using `SOAP` messages encapsulated in `HTTP` requests.
   * Can be stateful with some requests.
 
-3. GraphQL
-4. WebSockets
-5. webhooks
-6. gRPC (Google Remote Procedure Call)
-7. MQTT (MQ Telemetry Transport)
+#### 3. GraphQL
+#### 4. WebSockets
+#### 5. webhooks
+#### 6. gRPC (Google Remote Procedure Call)
+#### 7. MQTT (MQ Telemetry Transport)
