--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -2,39 +2,39 @@ Application Programming Interfaces (APIs) are all about machine-to-machine commu
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/81c54be7-3b45-46f4-b4fd-ef78ba0d8c21)
 
-### Why do we use APIs?
+## Why do we use APIs?
 One of the problems APIs solve is that servers send `HTML` responses. While `HTML` can be translated easily by the browsers, the computers cannot do the same. To solve this problem, APIs are installed on the servers once, so they can return data in `XML` or `JSON` for computers to understand easily.
 
-### A few points about APIs:
+## A few points about APIs:
 * Because APIs respond with readable information, the API Clients can display the same information from the same API using different designs.
 * Most of the APIs rely on HTTP to request data.
 * Sending requests to APIs has a specific format in the API documentation.
 * Even modern websites use APIs behind the scenes to dynamically update content on the screen without any actions taken by users.
 
-### API Types:
+## API Types:
 1. Hardware API (eg. the mobile camera communication with the mobile operating System)
 2. Software Library API (Using methods from a library imported into an application. eg. image processed with filters)
 3. Web API (eg. stock prices from finance API)
 
-### API Accessibility:
+## API Accessibility:
 1. Public
 2. Private
 3. Partner
 
-### API Architectures:
-#### 1. REST (Representational State Transfer) --> Lightweight & Flexible Architecture
+## API Architectures:
+### 1. REST (Representational State Transfer) --> Lightweight & Flexible Architecture
   * It is an architectural style, not a strict protocol. It outlines a set of principles for designing web services that leverage the underlying HTTP method (eg. `GET`, `POST`, ... etc.).
   * Focus on resources and communicate using HTTP methods.
   * Stateless; does not require servers to remember data from past interactions for a new request-response pair.
   * Flexible to work with `JSON`, `XML`, plain text, and others.
 
-#### 2. SOAP (Simple Object Access Protocol) --> Stateful Strict Protocol
+### 2. SOAP (Simple Object Access Protocol) --> Stateful Strict Protocol
   * Strict protocol with specific `XML` format for messages over the `HTTP` protocol.
   * Focus on methods (functions), which can be called by clients using `SOAP` messages encapsulated in `HTTP` requests.
   * Can be stateful with some requests.
 
-#### 3. GraphQL
-#### 4. WebSockets
-#### 5. webhooks
-#### 6. gRPC (Google Remote Procedure Call)
-#### 7. MQTT (MQ Telemetry Transport)
+### 3. GraphQL
+### 4. WebSockets
+### 5. webhooks
+### 6. gRPC (Google Remote Procedure Call)
+### 7. MQTT (MQ Telemetry Transport)
