Update 2. Introduction to Postman.md

--- a/APIs for Beginners/2. Introduction to Postman.md
+++ b/APIs for Beginners/2. Introduction to Postman.md
@@ -1,2 +1,45 @@
 Postman is the world's largest public API hub with 100000+ APIs, where users can use its platform for building and using APIs.
 
+## Postman Platform Components:
+### 1. API Repository ((Core)):
+It is a cloud-based version-controlled repository for all API artifacts throughout the whole API life cycle; specifications, documentation, metrics, test cases, and permissions.
+
+### 2. Tools:
+It offers plenty of tools for designing, testing, mocking, monitoring API's health, and documenting.
+
+### 3. Intelligence:
+* Sending alerts and security warnings
+* Search in repositories
+* Reporting (for data lovers)
+
+### 4. Workspaces:
+* Personal
+* Private (for businesses)
+* Team (each member has a role)
+* Public
+
+### 5. Integration:
+* It is considered an API-First Development platform, as it integrates with most essential tools in the software development pipeline.
+* It integrates intuitively with old repositories.
+* Provides quality development through integration.
+
+## A Few Points About Postman:
+* Postman allows managing cookies, creating custom domains, and adding cookies to them.
+* By interacting with Postman's API platform and API interfaces we can:
+  1. Manage API data
+  2. Keep track of request history
+  3. Generate code snippets
+  4. Turn API data into charts and graphs through the visualizer
+* Edits in a Postman workspace synced with teammates in real-time.
+
+## Postman Sidebar:
+### 1. Collection:
+  Group together saved requests.
+### 2. Mock Servers:
+  To simulate requests when the production API is still under development.
+### 3. Monitor:
+  Continuous visibility into the health and performance of your APIs.
+### 4. APIs
+### 5. Environments
+### 6. Flows
+### 7. History
