--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -32,6 +32,7 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
   * Strict protocol with specific `XML` format for messages over the `HTTP` protocol.
   * Focus on methods (functions), which can be called by clients using `SOAP` messages encapsulated in `HTTP` requests.
   * Can be stateful with some requests.
+  * Commonly used in enterprise projects
 
 ### 3. GraphQL
 ### 4. WebSockets
