--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -35,6 +35,9 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
   * Commonly used in enterprise projects
 
 ### 3. GraphQL
+  * Takes more sophisticated approach
+  * Focus on precise and flexible data retrieval, minimizing data transfer and performance optimization
+
 ### 4. WebSockets
 ### 5. webhooks
 ### 6. gRPC (Google Remote Procedure Call)
