--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -22,23 +22,29 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
 3. Partner
 
 ## API Architectures:
-### 1. REST (Representational State Transfer) --> Lightweight & Flexible Architecture
+#### 1. REST (Representational State Transfer) --> Lightweight & Flexible Architecture
   * It is an architectural style, not a strict protocol. It outlines a set of principles for designing web services that leverage the underlying HTTP method (eg. `GET`, `POST`, ... etc.).
   * Focus on resources and communicate using HTTP methods.
   * Stateless; does not require servers to remember data from past interactions for a new request-response pair.
   * Flexible to work with `JSON`, `XML`, plain text, and others.
 
-### 2. SOAP (Simple Object Access Protocol) --> Stateful Strict Protocol
+#### 2. SOAP (Simple Object Access Protocol) --> Stateful Strict Protocol
   * Strict protocol with specific `XML` format for messages over the `HTTP` protocol.
   * Focus on methods (functions), which can be called by clients using `SOAP` messages encapsulated in `HTTP` requests.
   * Can be stateful with some requests.
   * Commonly used in enterprise projects
 
-### 3. GraphQL
+#### 3. GraphQL
   * Takes more sophisticated approach
   * Focus on precise and flexible data retrieval, minimizing data transfer and performance optimization
 
-### 4. WebSockets
-### 5. webhooks
-### 6. gRPC (Google Remote Procedure Call)
-### 7. MQTT (MQ Telemetry Transport)
+#### 4. WebSockets
+#### 5. webhooks
+#### 6. gRPC (Google Remote Procedure Call)
+#### 7. MQTT (MQ Telemetry Transport)
+
+## Authorization (Auth):
+APIs user authorization (auth) to ensure that clients' requests access data securely. This can involve authenticating the sender of the request and ensuring they have the permission to access or manipulate relevant data. Three commonly used methods are:
+1. `Basic Auth`: requires sending a verified username and password.
+2. `Oauth`: requires sending a granted access token with the request, and it is useful when multiple application needs access.
+3. `API Key`: requires sending a secrey key-value pair in the request header or query parameters.
