Update 1. Introduction to APIs.md

--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -48,3 +48,11 @@ APIs user authorization (auth) to ensure that clients' requests access data secu
 1. `Basic Auth`: requires sending a verified username and password.
 2. `Oauth`: requires sending a granted access token with the request, and it is useful when multiple application needs access.
 3. `API Key`: requires sending a secrey key-value pair in the request header or query parameters.
+
+### Notes:
+* If you are integrating a third party API, the required authentication will be specified by the API documentation with exact format.
+* The authentication data can be added in the `Headers` or the `Authorization` tabs.
+* We can specify the data type we want to recieve in a response in the authentication process.
+
+### Metaphorically:
+`Headers` are like the outside envelope when you send a letter. It contains information about delivering the letter (proof of payment for postage and more). The actual data `Payload` is the letter inside the envelope.
