--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -30,12 +30,12 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
 
 #### 2. SOAP (Simple Object Access Protocol) --> Stateful Strict Protocol
   * Strict protocol with specific `XML` format for messages over the `HTTP` protocol.
-  * Focus on methods (functions), which can be called by clients using `SOAP` messages encapsulated in `HTTP` requests.
+  * Focus on methods (functions), which clients can call using `SOAP` messages encapsulated in `HTTP` requests.
   * Can be stateful with some requests.
   * Commonly used in enterprise projects
 
 #### 3. GraphQL
-  * Takes more sophisticated approach
+  * Takes a more sophisticated approach
   * Focus on precise and flexible data retrieval, minimizing data transfer and performance optimization
 
 #### 4. WebSockets
@@ -44,15 +44,15 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
 #### 7. MQTT (MQ Telemetry Transport)
 
 ## Authorization (Auth):
-APIs user authorization (auth) to ensure that clients' requests access data securely. This can involve authenticating the sender of the request and ensuring they have the permission to access or manipulate relevant data. Three commonly used methods are:
-1. `Basic Auth`: requires sending a verified username and password.
-2. `Oauth`: requires sending a granted access token with the request, and it is useful when multiple application needs access.
-3. `API Key`: requires sending a secrey key-value pair in the request header or query parameters.
+APIs user authorization (auth) to ensure that clients' requests access data securely. This can involve authenticating the sender of the request and ensuring they have permission to access or manipulate relevant data. Three commonly used methods are:
+1. `Basic Auth` requires sending a verified username and password.
+2. `Oauth` requires sending a granted access token with the request, which is useful when multiple applications need access.
+3. `API Key` requires sending a secret key-value pair in the request header or query parameters.
 
 ### Notes:
-* If you are integrating a third party API, the required authentication will be specified by the API documentation with exact format.
+* If you are integrating a third-party API, the API documentation will specify the required authentication in exact format.
 * The authentication data can be added in the `Headers` or the `Authorization` tabs.
-* We can specify the data type we want to recieve in a response in the authentication process.
+* We can specify the data type we want to receive in a response in the authentication process.
 
 ### Metaphorically:
 `Headers` are like the outside envelope when you send a letter. It contains information about delivering the letter (proof of payment for postage and more). The actual data `Payload` is the letter inside the envelope.
