--- a/APIs for Beginners/3. Requests & Responses.md
+++ b/APIs for Beginners/3. Requests & Responses.md
@@ -3,7 +3,7 @@
 2. `GET`: Retrieve Data (Read)
 3. `PUSH/PATCH`: Update Data (Update)
 
-   `PUSH` usually replaces and entire resource, whereas `PATCH` usually is for partial updates.
+   `PUSH` usually replaces an entire resource, whereas `PATCH` usually is for partial updates.
 5. `DELETE`: Delete Data (Delete)
 
 ## URL Components
@@ -12,7 +12,7 @@
 ### Notes:
 * "Port", "Subdomain" and "Domain Name" represents the server's `host` data.
 * "Path" is put directly after the `/`.
-* "Queries" start with `?` sign.
+* "Queries" start with the `?` sign.
 * "Parameters" are separated with `&` for multiple parameter queries.
 
 ### Documentation Syntax:
@@ -22,7 +22,7 @@ Some documentations use curly braces like `users/{username}`, while others use c
 1. `GET https://some-api.com/photos?orientation=landscape&size=500X400`
 2. `GET https//api.github.com/users/{username}` --> `GET https//api.github.com/users/Sir-Elite`
 3. `GET https//api.github.com/repos/{owner}/{repoName}` --> `GET https//api.github.com/repos/Sir-Elite/My-Summaries`
-4. In the following request, we want to get books by "id" we will enter in the parameters:
+4. In the following request we want to get books by "id". We will enter the parameters:
    `GET https://library-api.postmanlabs.com/books/:id`
 
 
