--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -2,26 +2,26 @@ Application Programming Interfaces (APIs) are all about machine-to-machine commu
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/81c54be7-3b45-46f4-b4fd-ef78ba0d8c21)
 
-## Why do we use APIs?
+## I. Why do we use APIs?
 One of the problems APIs solve is that servers send `HTML` responses. While `HTML` can be translated easily by the browsers, the computers cannot do the same. To solve this problem, APIs are installed on the servers once, so they can return data in `XML` or `JSON` for computers to understand easily.
 
-## A few points about APIs:
+## II. A few points about APIs:
 * Because APIs respond with readable information, the API Clients can display the same information from the same API using different designs.
 * Most of the APIs rely on HTTP to request data.
 * Sending requests to APIs has a specific format in the API documentation.
 * Even modern websites use APIs behind the scenes to dynamically update content on the screen without any actions taken by users.
 
-## API Types:
+## III. API Types:
 1. Hardware API (eg. the mobile camera communication with the mobile operating System)
 2. Software Library API (Using methods from a library imported into an application. eg. image processed with filters)
 3. Web API (eg. stock prices from finance API)
 
-## API Accessibility:
+## IV. API Accessibility:
 1. Public
 2. Private
 3. Partner
 
-## API Architectures:
+## V. API Architectures:
 #### 1. REST (Representational State Transfer) --> Lightweight & Flexible Architecture
   * It is an architectural style, not a strict protocol. It outlines a set of principles for designing web services that leverage the underlying HTTP method (eg. `GET`, `POST`, ... etc.).
   * Focus on resources and communicate using HTTP methods.
@@ -43,7 +43,7 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
 #### 6. gRPC (Google Remote Procedure Call)
 #### 7. MQTT (MQ Telemetry Transport)
 
-## Authorization (Auth):
+## VI. Authorization (Auth):
 APIs user authorization (auth) to ensure that clients' requests access data securely. This can involve authenticating the sender of the request and ensuring they have permission to access or manipulate relevant data. Three commonly used methods are:
 1. `Basic Auth` requires sending a verified username and password.
 2. `Oauth` requires sending a granted access token with the request, which is useful when multiple applications need access.
@@ -56,3 +56,24 @@ APIs user authorization (auth) to ensure that clients' requests access data secu
 
 ### Metaphorically:
 `Headers` are like the outside envelope when you send a letter. It contains information about delivering the letter (proof of payment for postage and more). The actual data `Payload` is the letter inside the envelope.
+
+## VII. JSON Web Token (JWT):
+They are self-contained tokens used for authorization. They are, essentially, JSON objects containing information about users and their claims. They are mainly used for faster API calls. JWTs can be assigned using either a secret key or a public/private key pair, which gives control over the level of security to the author.
+
+## VIII. Variables:
+### Scopes:
+* Global
+* Collection
+* Environmental
+* Data
+* Local
+
+We can access the value of a defined variable using double curly brace syntax: `{{variableName}}`
+
+## IX. JSON vs XML:
+| JSON                                | XML                                                |
+| ----------------------------------- | -------------------------------------------------- |
+| Simple Syntax                       | Complex Syntax                                     |
+| Faster Parsing & Transmission       | Slower Parsing & Transmission                      |
+| Simpler Data Structures             | More Complex Data Structures & Supports Nesting    |
+| Excellent for General Data Exchange | Common in Legacy Systems (Outdated Systems in use) |
