Update 3. Requests & Responses.md

--- a/APIs for Beginners/3. Requests & Responses.md
+++ b/APIs for Beginners/3. Requests & Responses.md
@@ -26,7 +26,7 @@ Some documentations use curly braces like `users/{username}`, while others use c
    `GET https://library-api.postmanlabs.com/books/:id`
 
 
-## Response Status Codes
+## Some Response Status Codes
 | Range | Meaning      | Example                        |
 | ----- | ------------ | ------------------------------ |
 |       |              | `200` - OK                     |
