--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -77,3 +77,12 @@ We can access the value of a defined variable using double curly brace syntax: `
 | Faster Parsing & Transmission       | Slower Parsing & Transmission                      |
 | Simpler Data Structures             | More Complex Data Structures & Supports Nesting    |
 | Excellent for General Data Exchange | Common in Legacy Systems (Outdated Systems in use) |
+
+## X. Notification API
+It is a way for one software program to tell another program about something that has happened. The most common two notification channels are:
+1. Push Notifications:
+
+   Messages are sent from servers to an app or device, even if the app is not actively being used.
+2. Web Notifications:
+
+   Pop-up messages that websites can display in your browser. Typically used for alerts.
