Update 1. Introduction to APIs.md

--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -1,4 +1,4 @@
-Application Programming Interfaces (APIs) are all about machine-to-machine communication.
+Application Programming Interfaces (APIs) are a set of communication rules and abilities that enables interaction between software applications.
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/81c54be7-3b45-46f4-b4fd-ef78ba0d8c21)
 
