--- a/APIs for Beginners/3. Requests & Responses.md
+++ b/APIs for Beginners/3. Requests & Responses.md
@@ -6,11 +6,14 @@
    `PUSH` usually replaces an entire resource, whereas `PATCH` usually is for partial updates.
 5. `DELETE`: Delete Data (Delete)
 
-## URL Components
+## URL (Uniform Resource Locator):
+URLs are a fundamental concept in Web APIs. A URL is a structured address pointing to a specific resource. Via a URL, we can specify what resource we want to interact with.
+
+### URL Components
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/dd86e18c-7aa6-44b7-a427-9a20c94da44a)
 
 ### Notes:
-* "Port", "Subdomain" and "Domain Name" represents the server's `host` data.
+* "Subdomain" and "Domain Name" (or simply the "Domain") + "Port" represents the server's `host` data.
 * "Path" is put directly after the `/`.
 * "Queries" start with the `?` sign.
 * "Parameters" are separated with `&` for multiple parameter queries.
