More on Requests Library

--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -1,1 +1,44 @@
+## URLlib vs Requests
+they are two well-known Python libraries for integrating web APIs, such that:
+| urllib                                 | requests                        |
+| -------------------------------------- | ------------------------------- |
+| Bundled with Python                    | Many Powerful built-in features |
+| Python but not very developer-friendly | Easier to use                   |
 
+### Request example to get a list of music albums:
+#### 1. URLlib Code:
+    from urllib.request import urlopen
+    
+    with urlopen('http://localhost:3000/lyrics/') as response:
+    
+      # Use the correct function to read the response data from the response object
+      data = response.read()
+      encoding = response.headers.get_content_charset()
+      
+      # Decode the response data so you can print it as a string later
+      string = data.decode(encoding)
+      
+      print(string)
+
+#### 2. Requests Code
+    import requests
+
+    # Pass the API URL to the get function
+    response = requests.get("http://localhost:3000/lyrics/")
+
+    # Print out the text attribute of the response object
+    print(response.text)
+
+## Requests Library:
+It is a library that provides easy access to all "HTTP verbs" or "Request Methods".
+
+### Requests examples:
+    query_params = {'floor':77, 'elevator':True}
+    response1 = request.get('https://350.5th-ave.com/unit/243', params = query_params)
+    url = response1.url
+    response2 = request.post('https://350.5th-ave.com/unit/243', data = {"Key": "value"})
+    response3 = request.push('https://350.5th-ave.com/unit/243', data = {"Key": "value"})
+
+### Notes:
+* `params` in the `get` method is optional.
+* `data` in the `post` and the `push` methods is the data passed to the query itself, which is necessary in these cases.
