--- a/APIs for Beginners/3. Requests & Responses.md
+++ b/APIs for Beginners/3. Requests & Responses.md
@@ -32,6 +32,9 @@ Some documentations use curly braces like `users/{username}`, while others use c
 ## Some Response Status Codes
 | Range | Meaning      | Example                        |
 | ----- | ------------ | ------------------------------ |
+|       |              |                                |
+| `1XX` | Information  | `100` - Continue               |
+|       |              |                                |
 |       |              | `200` - OK                     |
 | `2XX` | Success      | `201` - Created                |
 |       |              | `204` - No Content (silent OK) |
