--- a/APIs for Beginners/3. Requests & Responses.md
+++ b/APIs for Beginners/3. Requests & Responses.md
@@ -50,3 +50,11 @@ Some documentations use curly braces like `users/{username}`, while others use c
 | `5XX` | Server Error | `502` - Bad Gateway            |
 |       |              | `504` - Gateway Timeout        |
 
+## Headers
+Headers contain information that describe the message or data being sent or received, such as the type of content we are sending or the date the requested resource was last modified. Headers are always formatted as `key: value` pairs separated by a colon. Each header starts with a case-insensitive key, followed by a colon, and then the value of that header.
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/552c0be6-a48b-4fe0-b8a0-2aa6c9e04c84)
+
+
+### Content Negotiation:
+Client and server use message headers to agree on the language they are using to exchange information. Here for example, the client sends the `accept: application/json` header to inform the server it can accept a response in JSON format. When the server responds, it includes the `content-type: application/json` header to let the client know what format it responded with.
